accordion no longer shows on mobile

--- a/src/styles/Accordion.scss
+++ b/src/styles/Accordion.scss
@@ -5,6 +5,10 @@
   padding: 15px;
   bottom: 0%;
   position: fixed;
+
+  @media screen and (max-width: 768px){
+    display: none;
+  }
 }
 
 .accordionItems .mapPin {
